tree-sitter-cabal-project/test/corpus/fields.txt
================================================================================
Single-line field
================================================================================

tests: True

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (boolean))))

================================================================================
Field with no value
================================================================================

funding:

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)))

================================================================================
Field with mixed value tokens
================================================================================

constraints: pkg == 1.0 && base >= 4.0

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (identifier)
      (constraint_op)
      (version)
      (constraint_op)
      (identifier)
      (constraint_op)
      (version))))

================================================================================
Field with comment on separate line
================================================================================

-- standalone comment
tests: False

--------------------------------------------------------------------------------

(source_file
  (comment)
  (field
    name: (field_name)
    value: (field_value
      (boolean))))
