tree-sitter-cabal-project/test/corpus/packages_list.txt
================================================================================
Packages: one per line with leading comma
================================================================================

packages:
    Cabal
  , Cabal-syntax
  , cabal-install

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (identifier)
      (identifier)
      (identifier))))

================================================================================
Packages: trailing comma style
================================================================================

packages: foo, bar, baz

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (identifier)
      (identifier)
      (identifier))))

================================================================================
Packages: glob wildcard
================================================================================

packages: */*.cabal

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (path))))

================================================================================
Packages: bare dot
================================================================================

packages: .

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (path))))
