tree-sitter-cabal-project/test/corpus/value_tokens.txt
================================================================================
Boolean values
================================================================================

tests: True
benchmarks: False
keep-going: yes

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (boolean)))
  (field
    name: (field_name)
    value: (field_value
      (boolean)))
  (field
    name: (field_name)
    value: (field_value
      (boolean))))

================================================================================
Version and constraint
================================================================================

constraints: base >= 4.14 && < 5

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (identifier)
      (constraint_op)
      (version)
      (constraint_op)
      (constraint_op)
      (integer))))

================================================================================
ISO date
================================================================================

index-state: hackage.haskell.org 2025-06-27T20:43:14Z

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (identifier)
      (iso_date))))

================================================================================
URL
================================================================================

url: https://github.com/haskell/cabal

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (url))))

================================================================================
Flag tokens
================================================================================

flags: +profiling -debug +static

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (flag_token)
      (flag_token)
      (flag_token))))

================================================================================
Qualified name (pkg:component)
================================================================================

allow-newer: pkga-1.1.2:dep-pkg

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (qualified_name))))
